Fixed styling bug where user information would be wrapped up

--- a/resources/assets/sass/_user.scss
+++ b/resources/assets/sass/_user.scss
@@ -35,6 +35,7 @@
       position: absolute;
       font-size: 14px;
       font-weight: 200;
+      width: 100px;
       left: 0px;
       bottom: 0px;
     }
